# raytracing-10

./: CMakeLists.txt  README.MD  main.cpp  output.ppm  raytracer  scene.json  test.cpp
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
core/: Hit.hpp  HitRecord.hpp  Material.hpp  Ray.hpp  Vec3.hpp
include/: Camera.h  Constants.h  Material.h  Object3D.h  Plane.h  Ray.h  RayTracer.h  Scene.h  Sphere.h  Vec3.h
objects/: Cone.hpp  Cube.hpp  Object.hpp  Plane.hpp  Sphere.hpp
output/: output.ppm
raytracer-sample-main/raytracer-sample-main/: CMakeLists.txt  CMakePresets.json
raytracer-sample-main/raytracer-sample-main/includes/rt/: camera.hpp  geometry.hpp  light.hpp  material.hpp  math.hpp  ray.hpp  sampling.hpp  scene.hpp  tracer.hpp
raytracer-sample-main/raytracer-sample-main/src/: main.cpp  tracer.cpp
render/: Renderer.cpp  Renderer.hpp
renderer/: Renderer.cpp  Renderer.hpp
scene/: Scene.hpp  SceneLoader.hpp
src/: Camera.cpp  Material.cpp  Plane.cpp  Ray.cpp  RayTracer.cpp  Scene.cpp  Sphere.cpp  Vec3.cpp
